--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@
                 class="fa-brands fa-twitter text-gray-600 hover:text-gray-900"
               ></i
             ></a>
-            <a href="#"
+            <a href="https://github.com/keshav220691/Tailwind"
               ><i
                 class="fa-brands fa-github text-gray-600 hover:text-gray-900"
               ></i
